# ka9q-tci

./: CLAUDE.md  Cargo.toml  config.example.yaml
docs/: network-discovery.md  tci-protocol.txt
src/: bridge.rs  config.rs  config_file.rs  main.rs
src/radiod/: control.rs  mod.rs  multicast.rs  rtp.rs  tlv.rs
src/tci/: mod.rs  protocol.rs  server.rs  state.rs
