[package]
name = "ka9q-tci"
version = "0.1.0"
edition = "2021"
description = "Bridge ka9q-radio IQ multicast streams to TCI WebSocket server"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
socket2 = { version = "0.5", features = ["all"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
